...
                                .foregroundColor(Color.black)
                                .fontWeight(.medium)
                        }
                        
                        NavigationLink(destination: SwipeView()) {
                            Text(items[2])
                                .accessibility(identifier: "Swipe")
                                .foregroundColor(Color.black)
                                .fontWeight(.medium)
                        }
                    }
                    
                    Section(header: Text("Assignment")) {
...
                                .fontWeight(.medium)
                        }
                    }
                }
                .padding()
            }
            .navigationBarTitle("Features")
        }
    }
}

struct ContentView_Previews: PreviewProvider {
    static var previews: some View {
...
