////
////  iOSTestingUITests.swift
////  iOSTestingUITests
////
////  Created by Rajeshkumar Ayyadurai on 25/09/22.
////
//
//import XCTest
//
//final class iOSTestingUITests: iOSTestingUIBaseClass {
//
//    func testAllElementsPresentOnScreen() throws {
////        let app = XCUIApplication()
////        app.launch()
//        XCTAssertTrue(app.staticTexts["Features"].exists)
//        app.buttons["Button"].tap()
//        app.textFields["First Name"].tap()
//        app.textFields["First Name"].typeText("hello")
//        app.textFields["Last Name"].tap()
//        app.textFields["Last Name"].typeText("world!")
//        app.buttons["Get name"].tap()
//        XCTAssertTrue(app.staticTexts["Name : hello world!"].exists)
//        app.buttons["Features"].tap()
//        XCTAssertTrue(app.staticTexts["Features"].exists)
//    }
//
//    func testLaunchPerformance() throws {
//        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
//            // This measures how long it takes to launch your application.
//            measure(metrics: [XCTApplicationLaunchMetric()]) {
//                XCUIApplication().launch()
//            }
//        }
//    }
//}
